# fractol

./: CMakeLists.txt  Makefile  fractol.h  ft_create_window.c~  ft_get_color.c  ft_get_color.c~  ft_initialization.c  ft_julia.c  ft_mandelbrot.c  ft_ship.c  hook.c  main.c
